# SmartGarden

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  VERSION.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_gpio_state_and_events.py  0003_garden_maps_and_shapes.py  0004_normalize_map_names.py  0005_user_friendly_system_state.py  0006_expand_garden_map_image_url.py  0007_manual_sequence_runs.py  0008_zone_irrigation_profile.py  0009_adaptive_irrigation_plan.py  0010_weather_forecast_cache.py  0011_system_heartbeats_alerts.py  0012_watering_run_occurrence_identity.py
backend/app/: config.py  entrypoint.py  logging_config.py  main.py  remote_gate.py  seed_local.py  watchdog.py  worker.py
backend/app/api/: dependencies.py  routes_health.py  routes_maps.py  routes_metrics.py  routes_runtime.py  routes_schedules.py  routes_system.py  routes_watering.py  routes_zones.py
backend/app/application/: alerting_service.py  schemas.py  (+13 more)
backend/irrigation_control_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_adaptive_irrigation.py  test_policies.py  test_real_gpiod.py  test_remote_gate.py  test_run_all_watering.py  test_runtime_api.py  test_runtime_service.py  test_scheduling.py  test_seed_local.py  test_system_pods_api.py  test_watchdog_service.py  test_watering_stop_handoff.py  test_weather_service.py  test_zone_assistant_api.py  test_zone_irrigation.py  test_zone_profile_service.py
(+130 files in other folders)
